--- a/note.ipynb
+++ b/note.ipynb
@@ -10,89 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[-2.9139e+00, -2.1051e-01,  1.3300e+00,  9.0380e-01, -1.4831e+00,\n",
-       "          -1.5855e+00,  1.7925e+00, -1.2949e+00,  7.2298e-02, -1.1462e+00,\n",
-       "          -2.1408e+00,  8.7631e-01, -1.7220e+00,  1.2837e+00,  9.1678e-01,\n",
-       "           8.9884e-01],\n",
-       "         [-1.3897e+00,  1.3296e+00,  2.0325e+00, -6.4050e-01, -4.3931e+00,\n",
-       "          -3.9219e+00, -1.4941e+00,  8.1903e-01,  1.1144e+00, -1.3318e+00,\n",
-       "          -9.6618e-01, -1.3095e+00, -8.5106e-01,  1.7560e-01,  6.4332e-01,\n",
-       "          -5.4598e-01],\n",
-       "         [ 2.0945e+00, -6.8511e-01, -5.3030e-01,  9.2037e-01, -2.3206e+00,\n",
-       "          -2.7420e+00,  5.9888e-01,  5.2305e-01, -3.6976e-01, -1.4534e+00,\n",
-       "           1.1216e+00, -7.1697e-01, -3.4596e-01,  1.9400e+00,  1.6490e+00,\n",
-       "           8.2876e-02],\n",
-       "         [-8.5131e-01,  2.2663e-01,  2.0797e+00, -2.5623e+00, -1.0696e+00,\n",
-       "          -2.4165e+00, -1.8133e+00,  1.5257e+00,  3.0520e+00,  7.8444e-01,\n",
-       "           3.0871e+00, -3.4731e-01,  1.1781e+00,  2.1167e+00,  2.8490e+00,\n",
-       "          -8.5295e-01],\n",
-       "         [ 2.2214e+00,  2.7440e+00,  1.0324e+00, -2.4868e+00,  3.8233e+00,\n",
-       "          -2.5353e-01, -5.5469e-01, -2.2853e-01,  5.8492e-01,  1.2607e+00,\n",
-       "           1.0081e+00, -9.8403e-02,  2.8545e+00, -2.5322e+00,  3.2152e+00,\n",
-       "           1.3287e+00],\n",
-       "         [ 2.5587e+00,  1.3538e+00,  2.1662e-01, -2.4665e+00, -6.8933e-01,\n",
-       "           1.0057e+00,  1.8823e+00,  2.3168e+00,  6.3945e-01, -1.4770e-01,\n",
-       "           3.9053e-01, -3.3341e-01, -1.2708e-01,  1.9511e+00,  3.6543e+00,\n",
-       "           5.9739e-01]],\n",
-       "\n",
-       "        [[ 1.4564e+00,  3.6530e+00,  1.1497e+00,  8.2671e-01, -5.3192e-01,\n",
-       "           1.1415e+00, -2.3912e+00, -2.8099e+00,  2.0763e+00, -2.9526e+00,\n",
-       "           1.2880e+00, -9.1740e-01, -2.3855e+00,  4.2296e-01, -9.7641e-01,\n",
-       "           3.0234e-01],\n",
-       "         [-9.0853e-01,  1.2092e+00,  9.4268e-01, -1.2445e+00, -6.9131e-01,\n",
-       "          -1.8499e-01, -9.4946e-01,  2.7171e-03,  6.0589e-01, -2.4447e+00,\n",
-       "          -1.8092e+00,  1.5296e+00, -3.7821e+00,  4.0959e-01, -3.8376e+00,\n",
-       "           1.7849e+00],\n",
-       "         [ 3.9367e-01,  3.8696e+00, -1.2661e+00,  2.8816e-01,  1.2348e+00,\n",
-       "           4.4458e-01, -1.2922e+00, -4.0997e-01,  1.6940e-01, -4.9094e-01,\n",
-       "           9.7723e-01, -6.5521e-01, -2.4564e+00,  6.3203e-01, -4.2444e+00,\n",
-       "           2.0740e-01],\n",
-       "         [-1.3056e+00,  1.8572e+00,  1.4083e+00, -1.1395e+00,  2.3707e+00,\n",
-       "          -5.0521e-01, -4.0802e-01, -2.0837e+00,  9.1615e-01,  3.6072e+00,\n",
-       "           9.0781e-01,  1.0400e+00,  1.1208e+00, -1.1599e+00, -1.8438e+00,\n",
-       "           3.3536e+00],\n",
-       "         [ 1.2482e-01,  2.4475e+00,  4.3135e-01, -2.6162e-01,  3.1194e+00,\n",
-       "          -4.6148e-01, -1.7752e-01, -1.3918e+00, -2.6813e+00,  2.7414e+00,\n",
-       "          -2.5809e+00,  4.3189e-01, -3.9222e+00, -6.7570e-01, -2.0934e+00,\n",
-       "          -5.9597e-01],\n",
-       "         [-1.6247e+00,  5.3751e-01, -8.2974e-01,  2.3496e+00,  2.6888e+00,\n",
-       "          -5.5369e-01, -2.7688e+00, -2.7782e+00,  5.9999e-01,  6.8108e-01,\n",
-       "          -2.6269e+00,  1.1787e+00,  1.0003e+00,  1.7068e+00, -1.7696e+00,\n",
-       "          -1.7138e+00]],\n",
-       "\n",
-       "        [[ 7.0221e-01,  2.5466e+00, -7.1592e-01,  1.1824e+00, -4.3497e-01,\n",
-       "          -3.7671e-01,  3.4019e-01,  1.1902e+00, -1.0052e+00, -2.2197e+00,\n",
-       "           6.0525e-01,  8.9525e-01, -1.1823e+00, -3.3310e+00, -2.1437e+00,\n",
-       "          -1.0287e-01],\n",
-       "         [ 7.7301e-01,  2.1939e+00, -6.9442e-01, -2.2649e+00,  1.2414e+00,\n",
-       "           6.9650e-01, -3.9896e-01, -2.8507e-01, -7.8091e-02, -5.2178e-01,\n",
-       "           1.5555e-01,  1.2340e+00,  5.3270e-01, -5.1178e-01,  1.9693e+00,\n",
-       "           4.9418e-01],\n",
-       "         [ 2.9445e+00,  1.5758e+00,  2.2363e+00,  1.7408e+00, -3.8282e+00,\n",
-       "           2.1716e+00,  9.0091e-01, -2.7330e+00, -1.2517e+00,  5.7611e-01,\n",
-       "          -6.0319e-01,  3.3301e-01, -5.1638e-01, -5.7440e-01, -1.0726e+00,\n",
-       "          -5.7420e-01],\n",
-       "         [ 3.7462e-01, -5.0092e+00,  1.4465e+00, -1.6901e+00, -2.0218e+00,\n",
-       "          -1.1854e+00,  2.1669e+00, -8.1356e-01, -7.0844e-01, -1.1683e+00,\n",
-       "          -1.2588e+00,  1.0084e-01, -5.1380e+00,  2.0348e+00,  7.2570e-02,\n",
-       "          -1.2960e-02],\n",
-       "         [ 1.2463e+00, -2.1329e+00, -1.2706e+00, -4.7442e-01, -1.4451e+00,\n",
-       "          -6.0616e-01,  3.4179e-01, -2.1131e+00, -6.1882e-01, -1.9520e+00,\n",
-       "           9.7820e-01, -1.2491e+00, -6.2225e-01,  2.5124e+00, -2.0888e+00,\n",
-       "           1.6856e+00],\n",
-       "         [-7.8126e-01, -2.8452e+00, -7.2256e-01, -1.4648e+00, -2.9635e+00,\n",
-       "           1.4486e+00,  6.7854e-02, -1.5143e+00, -6.2246e-01, -7.1740e-01,\n",
-       "           7.9264e-01,  8.6506e-01, -1.2227e+00,  2.4997e+00,  2.7716e+00,\n",
-       "           3.9955e-02]]])"
+       "tensor([0, 0, 0])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,26 +27,74 @@
    "source": [
     "from model import sandwich_embedding as se \n",
     "import torch \n",
+    "from model import GPTConfig\n",
     "\n",
-    "B, S, D = 3, 6, 16 \n",
-    "L = 2\n",
-    "K = 3 \n",
+    "config = GPTConfig(vocab_size=50304, n_layer=12, n_head=6, n_embd=768, K=3, L=2, device=\"cpu\", _compile=False)\n",
+    "B, S, D = 3, 6, config.n_embd \n",
+    "K = config.K\n",
+    "L = config.L\n",
     "\n",
-    "# Test on the temporal aligned embedding ensemble\n",
+    "# Sandwich embedding ensemble (temporal predicted token embeddings ensemble)\n",
     "\n",
     "token_embeddings = torch.randn(B, S, D)\n",
-    "high_level_embeddings = torch.randn(B, L, D)\n",
-    "low_level_embeddings = torch.randn(B, S, D)\n",
+    "high_level_embeddings = torch.randn(B, S//K, D)\n",
+    "low_level_embeddings = torch.randn(B, S*K, D)\n",
     "\n",
-    "se(token_embeddings, high_level_embeddings, low_level_embeddings, K)\n"
+    "# (I). Embedding Ensemble\n",
+    "# v1. pure additive ensemble across abstraction levels\n",
+    "se(low_level_embeddings, token_embeddings, high_level_embeddings, K)\n",
+    "\n",
+    "# (II). Conditional GPT\n",
+    "from model import CondGPT, GPTConfig\n",
+    "\n",
+    "condgpt = CondGPT(config)\n",
+    "idx = torch.randint(0, 50304, (B, S))\n",
+    "condgpt.forward(idx, high_level_embeddings, low_level_embeddings)\n",
+    "condgpt.inference(idx, high_level_embeddings, low_level_embeddings)[1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_len = token_embeddings.shape[1]\n",
+    "L2 = low_level_embeddings.shape[1]\n",
+    "assert seq_len*K <= L2, f\"Planning without grounding is not allowed: {seq_len} > {L2}\"\n",
+    "token_embeddings += low_level_embeddings[:, 0:seq_len*K:K]\n",
+    "\n",
+    "if high_level_embeddings is not None: \n",
+    "    L1 = high_level_embeddings.shape[1]\n",
+    "    assert L1 * K <= seq_len < (L1 + 1) * K, f\"Execution without purpose or planning without grounding is not allowed: {L1 * K} < {seq_len} <= {(L1 + 1) * K}\"\n",
+    "    cond_embeddings = high_level_embeddings.repeat_interleave(K, dim=1)\n",
+    "    token_embeddings[:, :L1 * K] += cond_embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Better to put a $<begin>$ token at each abstract level, just to avoid forward propagation without token at abstract level. "
+   ]
   },
   {
    "cell_type": "code",
