--- a/note.ipynb
+++ b/note.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "tensor([0, 0, 0])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,26 +50,8 @@
     "condgpt = CondGPT(config)\n",
     "idx = torch.randint(0, 50304, (B, S))\n",
     "condgpt.forward(idx, high_level_embeddings, low_level_embeddings)\n",
-    "condgpt.inference(idx, high_level_embeddings, low_level_embeddings)[1]"
+    "condgpt.generate(idx, high_level_embeddings, low_level_embeddings)[1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 0, 0])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -98,10 +80,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step t string:  0\n",
+      "Step t string:  001\n",
+      "Step t string:  0010\n",
+      "Step t string:  0010012\n",
+      "Step t string:  00100120\n",
+      "Step t string:  0010012001\n",
+      "Step t string:  00100120010\n",
+      "Step t string:  001001200100123\n",
+      "Step t string:  0010012001001230\n",
+      "Step t string:  001001200100123001\n",
+      "Step t string:  0010012001001230010\n",
+      "Step t string:  0010012001001230010012\n",
+      "Step t string:  00100120010012300100120\n",
+      "Step t string:  0010012001001230010012001\n",
+      "Step t string:  00100120010012300100120010\n",
+      "Step t string:  0010012001001230010012001001234\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lmax = 4 # maxiaml abstraction level\n",
+    "K = 2  # abstraction ratio\n",
+    "\t\n",
+    "\t\n",
+    "# Version 2. Focus on 'generating all tokens for current time' t, realisticly speaking, having the model go on forever is not a great idea\n",
+    "#            better control at least \"how many steps it'll run\", or at least having it wait for the real world ...\n",
+    "\n",
+    "def generate_level(l: int, curr: str, t: int): \n",
+    "    if l <= Lmax:\n",
+    "        curr += str(l)\n",
+    "        if t % K == 0: \n",
+    "            return generate_level(l+1, curr, t // K)\n",
+    "    return curr\n",
+    "\t\t\n",
+    "# bugs for t=2\n",
+    "total_str = \"\"\n",
+    "for t in range(1, 2**4+1):\n",
+    "\tt_str = generate_level(0, \"\", t)\n",
+    "\ttotal_str += t_str\n",
+    "\tprint(\"Step t string: \", total_str) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[3, 4, 5], [0], [0], [0]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Lmax = 4\n",
+    "K = 2\n",
+    "BOS_TOKEN_ID = 0 \n",
+    "\n",
+    "def decorate_sequences(idx: list, Lmax: int): \n",
+    "\tif not isinstance(idx[0], list): \n",
+    "\t\tidx = [idx] + [[BOS_TOKEN_ID] for l in range(1, Lmax)]\n",
+    "\telse:\n",
+    "\t  assert len(idx) == Lmax, f\"Missing sequence for {Lmax} abstraction levels, currently only got {len(idx)}.\"\n",
+    "\t  idx = [seq if (len(seq)>0 and isistance(seq[0], int)) else [BOS_TOKEN_ID] for seq in idx]\n",
+    "\treturn idx\n",
+    "\n",
+    "\n",
+    "idx = [3, 4, 5]\n",
+    "decorate_sequences(idx, Lmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = 1"
+   ]
   },
   {
    "cell_type": "code",
