update sandwich embedding

--- a/note.ipynb
+++ b/note.ipynb
@@ -10,20 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 0, 0])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from model import sandwich_embedding as se \n",
     "import torch \n",
@@ -38,7 +27,90 @@
     "\n",
     "token_embeddings = torch.randn(B, S, D)\n",
     "high_level_embeddings = torch.randn(B, S//K, D)\n",
-    "low_level_embeddings = torch.randn(B, S*K, D)\n",
+    "low_level_embeddings = torch.randn(B, S, D)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question #1. should low-level embedding be shorter or longer than token embeddings? \n",
+    "# During generation, we should operate on the valid embedding only\n",
+    "# During training, we should operate on full token embeddings and valid condition embeddings\n",
+    "# - this means the sandwich embedding should not require upper-bound on token embeddings' length\n",
+    "\n",
+    "L1 = low_level_embeddings.shape[1]\n",
+    "L2 = high_level_embeddings.shape[1]\n",
+    "L = token_embeddings.shape[1] \n",
+    "\n",
+    "# assert L1 -1 <= L, f\"\"\n",
+    "from typing import Optional\n",
+    "\n",
+    "def sandwich_embedding(\n",
+    "    low_level_embeddings: Optional[torch.Tensor] = None,    # [B, L1, D]\n",
+    "    token_embeddings: Optional[torch.Tensor] = None,        # [B, L, D]\n",
+    "    high_level_embeddings: Optional[torch.Tensor] = None,   # [B, L2, D]\n",
+    "    K: int = 1,                      # abstraction ratio\n",
+    "    ):\n",
+    "    \"\"\"\n",
+    "    sandwich_i = token[i-1] + low[i] + high[(i-1)//K] for i in [0, 1, ..., L]\n",
+    "    \"\"\"\n",
+    "    assert token_embeddings is not None or low_level_embeddings is not None, \"token_embeddings or low_level_embeddings must be provided\"\n",
+    "\n",
+    "    if token_embeddings is None: # generation mode, first abstract token\n",
+    "        assert low_level_embeddings is not None, \"When token_embeddings is None, low_level_embeddings must be provided\"\n",
+    "        return low_level_embeddings[:, :1]\n",
+    "\n",
+    "    L1 = low_level_embeddings.shape[1]\n",
+    "    L2 = high_level_embeddings.shape[1]\n",
+    "    L = token_embeddings.shape[1]\n",
+    "    \n",
+    "    if high_level_embeddings is not None: # planning guidance\n",
+    "        token_embeddings[:, :min(L, K * L2)] += high_level_embeddings.repeat_interleave(K, dim=1)[:, :min(L, K * L2)]\n",
+    "    \n",
+    "    if low_level_embeddings is not None: # grounding\n",
+    "        token_embeddings = torch.cat([torch.zeros(*token_embeddings.shape[:1], 1, token_embeddings.shape[2], device=token_embeddings.device, dtype=token_embeddings.dtype), token_embeddings], dim=1)\n",
+    "        token_embeddings[:, :min(L1, L + 1)] += low_level_embeddings[:, 0:min(L1, L + 1)]\n",
+    "\n",
+    "    return token_embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model import sandwich_embedding as se \n",
+    "import torch \n",
+    "from model import GPTConfig\n",
+    "\n",
+    "config = GPTConfig(vocab_size=50304, n_layer=12, n_head=6, n_embd=768, K=3, L=2, device=\"cpu\", _compile=False)\n",
+    "B, S, D = 3, 6, config.n_embd \n",
+    "K = config.K\n",
+    "L = config.L\n",
+    "\n",
+    "# Sandwich embedding ensemble (temporal predicted token embeddings ensemble)\n",
+    "\n",
+    "token_embeddings = torch.randn(B, S, D)\n",
+    "high_level_embeddings = torch.randn(B, S//K, D)\n",
+    "low_level_embeddings = torch.randn(B, S, D)\n",
     "\n",
     "# (I). Embedding Ensemble\n",
     "# v1. pure additive ensemble across abstraction levels\n",
