--- a/note.ipynb
+++ b/note.ipynb
@@ -10,273 +10,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[ 64,   3,  49,  98,  14,  71,  73,  24,   6,  88,  97,  38,  60, 122,\n",
+       "          110,  10, 119,  93,   0],\n",
+       "         [112,  67,  71,  41,  35, 112,  19, 123,  57,  72,  74,  73,  95,  39,\n",
+       "           71,  56, 118,  63,   0],\n",
+       "         [ 91,  57,  48, 122,  71, 109,  95,  44,   9,  54,  15, 108,   1,  14,\n",
+       "            2,  59,  86, 124,   0]]),\n",
+       " tensor([[0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0],\n",
+       "         [0, 0, 0, 0, 0, 0]])]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from model import sandwich_embedding as se \n",
     "import torch \n",
     "from model import GPTConfig\n",
     "\n",
-    "config = GPTConfig(vocab_size=50304, n_layer=12, n_head=6, n_embd=768, K=3, L=2, device=\"cpu\", _compile=False)\n",
+    "config = GPTConfig(vocab_size=128, n_layer=4, n_head=4, n_embd=64, K=3, L=2, device=\"cpu\", _compile=False)\n",
     "B, S, D = 3, 6, config.n_embd \n",
     "K = config.K\n",
     "L = config.L\n",
     "\n",
+    "# (I). Sandwich embedding\n",
+    "# --------------------------------------------------------------------------------------------------------------------------\n",
     "# Sandwich embedding ensemble (temporal predicted token embeddings ensemble)\n",
+    "S, S1, S2 = 18, 6, 2\n",
     "\n",
-    "token_embeddings = torch.randn(B, S, D)\n",
-    "high_level_embeddings = torch.randn(B, S//K, D)\n",
-    "low_level_embeddings = torch.randn(B, S, D)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Question #1. should low-level embedding be shorter or longer than token embeddings? \n",
-    "# During generation, we should operate on the valid embedding only\n",
-    "# During training, we should operate on full token embeddings and valid condition embeddings\n",
-    "# - this means the sandwich embedding should not require upper-bound on token embeddings' length\n",
+    "tok_embed = torch.randn(B, S, D)\n",
+    "high_embed = torch.randn(B, S2, D)\n",
+    "low_embed = torch.randn(B, S1, D)\n",
     "\n",
-    "L1 = low_level_embeddings.shape[1]\n",
-    "L2 = high_level_embeddings.shape[1]\n",
-    "L = token_embeddings.shape[1] \n",
+    "# test 1. (S, S1, S2) = (0, 1, 0) --> 1 (check)\n",
+    "# test 2. (S, S1, S2) = (3, 4, 1) --> 4 (check)\n",
+    "# test 3. (S, S1, S2) = (18, 6, 5) --> 19 (check)\n",
+    "cond_embed = se(low_embed, tok_embed, high_embed, K)\n",
     "\n",
-    "# assert L1 -1 <= L, f\"\"\n",
-    "from typing import Optional\n",
-    "\n",
-    "def sandwich_embedding(\n",
-    "    low_level_embeddings: Optional[torch.Tensor] = None,    # [B, L1, D]\n",
-    "    token_embeddings: Optional[torch.Tensor] = None,        # [B, L, D]\n",
-    "    high_level_embeddings: Optional[torch.Tensor] = None,   # [B, L2, D]\n",
-    "    K: int = 1,                      # abstraction ratio\n",
-    "    ):\n",
-    "    \"\"\"\n",
-    "    sandwich_i = token[i-1] + low[i] + high[(i-1)//K] for i in [0, 1, ..., L]\n",
-    "    \"\"\"\n",
-    "    assert token_embeddings is not None or low_level_embeddings is not None, \"token_embeddings or low_level_embeddings must be provided\"\n",
-    "\n",
-    "    if token_embeddings is None: # generation mode, first abstract token\n",
-    "        assert low_level_embeddings is not None, \"When token_embeddings is None, low_level_embeddings must be provided\"\n",
-    "        return low_level_embeddings[:, :1]\n",
-    "\n",
-    "    L1 = low_level_embeddings.shape[1]\n",
-    "    L2 = high_level_embeddings.shape[1]\n",
-    "    L = token_embeddings.shape[1]\n",
-    "    \n",
-    "    if high_level_embeddings is not None: # planning guidance\n",
-    "        token_embeddings[:, :min(L, K * L2)] += high_level_embeddings.repeat_interleave(K, dim=1)[:, :min(L, K * L2)]\n",
-    "    \n",
-    "    if low_level_embeddings is not None: # grounding\n",
-    "        token_embeddings = torch.cat([torch.zeros(*token_embeddings.shape[:1], 1, token_embeddings.shape[2], device=token_embeddings.device, dtype=token_embeddings.dtype), token_embeddings], dim=1)\n",
-    "        token_embeddings[:, :min(L1, L + 1)] += low_level_embeddings[:, 0:min(L1, L + 1)]\n",
-    "\n",
-    "    return token_embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from model import sandwich_embedding as se \n",
-    "import torch \n",
-    "from model import GPTConfig\n",
-    "\n",
-    "config = GPTConfig(vocab_size=50304, n_layer=12, n_head=6, n_embd=768, K=3, L=2, device=\"cpu\", _compile=False)\n",
-    "B, S, D = 3, 6, config.n_embd \n",
-    "K = config.K\n",
-    "L = config.L\n",
-    "\n",
-    "# Sandwich embedding ensemble (temporal predicted token embeddings ensemble)\n",
-    "\n",
-    "token_embeddings = torch.randn(B, S, D)\n",
-    "high_level_embeddings = torch.randn(B, S//K, D)\n",
-    "low_level_embeddings = torch.randn(B, S, D)\n",
-    "\n",
-    "# (I). Embedding Ensemble\n",
-    "# v1. pure additive ensemble across abstraction levels\n",
-    "se(low_level_embeddings, token_embeddings, high_level_embeddings, K)\n",
     "\n",
     "# (II). Conditional GPT\n",
+    "# --------------------------------------------------------------------------------------------------------------------------\n",
     "from model import CondGPT, GPTConfig\n",
     "\n",
     "condgpt = CondGPT(config)\n",
-    "idx = torch.randint(0, 50304, (B, S))\n",
-    "condgpt.forward(idx, high_level_embeddings, low_level_embeddings)\n",
-    "condgpt.generate(idx, high_level_embeddings, low_level_embeddings)[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq_len = token_embeddings.shape[1]\n",
-    "L2 = low_level_embeddings.shape[1]\n",
-    "assert seq_len*K <= L2, f\"Planning without grounding is not allowed: {seq_len} > {L2}\"\n",
-    "token_embeddings += low_level_embeddings[:, 0:seq_len*K:K]\n",
+    "idx = torch.randint(0, 128, (B, S))\n",
     "\n",
-    "if high_level_embeddings is not None: \n",
-    "    L1 = high_level_embeddings.shape[1]\n",
-    "    assert L1 * K <= seq_len < (L1 + 1) * K, f\"Execution without purpose or planning without grounding is not allowed: {L1 * K} < {seq_len} <= {(L1 + 1) * K}\"\n",
-    "    cond_embeddings = high_level_embeddings.repeat_interleave(K, dim=1)\n",
-    "    token_embeddings[:, :L1 * K] += cond_embeddings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Better to put a $<begin>$ token at each abstract level, just to avoid forward propagation without token at abstract level. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step t string:  0\n",
-      "Step t string:  001\n",
-      "Step t string:  0010\n",
-      "Step t string:  0010012\n",
-      "Step t string:  00100120\n",
-      "Step t string:  0010012001\n",
-      "Step t string:  00100120010\n",
-      "Step t string:  001001200100123\n",
-      "Step t string:  0010012001001230\n",
-      "Step t string:  001001200100123001\n",
-      "Step t string:  0010012001001230010\n",
-      "Step t string:  0010012001001230010012\n",
-      "Step t string:  00100120010012300100120\n",
-      "Step t string:  0010012001001230010012001\n",
-      "Step t string:  00100120010012300100120010\n",
-      "Step t string:  0010012001001230010012001001234\n"
-     ]
-    }
-   ],
-   "source": [
-    "Lmax = 4 # maxiaml abstraction level\n",
-    "K = 2  # abstraction ratio\n",
-    "\t\n",
-    "\t\n",
-    "# Version 2. Focus on 'generating all tokens for current time' t, realisticly speaking, having the model go on forever is not a great idea\n",
-    "#            better control at least \"how many steps it'll run\", or at least having it wait for the real world ...\n",
+    "condgpt.forward(idx, high_embed, low_embed)\n",
+    "condgpt.generate(idx, high_embed, low_embed)[1]\n",
     "\n",
-    "def generate_level(l: int, curr: str, t: int): \n",
-    "    if l <= Lmax:\n",
-    "        curr += str(l)\n",
-    "        if t % K == 0: \n",
-    "            return generate_level(l+1, curr, t // K)\n",
-    "    return curr\n",
-    "\t\t\n",
-    "# bugs for t=2\n",
-    "total_str = \"\"\n",
-    "for t in range(1, 2**4+1):\n",
-    "\tt_str = generate_level(0, \"\", t)\n",
-    "\ttotal_str += t_str\n",
-    "\tprint(\"Step t string: \", total_str) \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[3, 4, 5], [0], [0], [0]]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Lmax = 4\n",
-    "K = 2\n",
-    "BOS_TOKEN_ID = 0 \n",
+    "# (III). GAT \n",
+    "# --------------------------------------------------------------------------------------------------------------------------\n",
+    "from model import GAT\n",
+    "gat = GAT(config)\n",
     "\n",
-    "def decorate_sequences(idx: list, Lmax: int): \n",
-    "\tif not isinstance(idx[0], list): \n",
-    "\t\tidx = [idx] + [[BOS_TOKEN_ID] for l in range(1, Lmax)]\n",
-    "\telse:\n",
-    "\t  assert len(idx) == Lmax, f\"Missing sequence for {Lmax} abstraction levels, currently only got {len(idx)}.\"\n",
-    "\t  idx = [seq if (len(seq)>0 and isistance(seq[0], int)) else [BOS_TOKEN_ID] for seq in idx]\n",
-    "\treturn idx\n",
+    "idx = torch.randint(0, 128, (B, S))\n",
     "\n",
-    "\n",
-    "idx = [3, 4, 5]\n",
-    "decorate_sequences(idx, Lmax)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "K"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = 1"
+    "# (a). one-step generation with GAT\n",
+    "gat.generate(idx)"
    ]
   },
   {
